fix: prevent prepare script execution in Docker production stage
- Add --ignore-scripts flag to npm ci in Dockerfile.multistage
- Prevents prepare script from running during production dependency install
- Fixes tsc not found error when building Docker images
- Production stage only needs runtime dependencies, not build tools

--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -27,7 +27,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
+RUN npm ci --only=production --ignore-scripts && npm cache clean --force
 
 # Copy built application from builder stage
 COPY --from=builder /app/dist ./dist
