fix: copy source code before npm ci in multistage Dockerfile
- Move COPY src/ before RUN npm ci to fix TypeScript compilation
- Resolves TS18003 error: no inputs found in config file
- Prepare script needs source files to be present during npm ci
- Maintains build caching efficiency while fixing build order

--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -8,11 +8,11 @@ WORKDIR /app
 COPY package*.json ./
 COPY tsconfig.json ./
 
+# Copy source code before dependencies to enable prepare script
+COPY src/ ./src/
+
 # Install all dependencies (including dev dependencies for build)
 RUN npm ci
-
-# Copy source code
-COPY src/ ./src/
 
 # Build the application
 RUN npm run build
