fix: Fix GitHub Actions multiline output syntax in release workflow
- Use proper heredoc delimiter format for changelog generation
- Prevents 'Invalid value. Matching delimiter not found' error
- Uses unique CHANGELOG_EOF delimiter with proper quoting

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,10 +138,12 @@ jobs:
           echo "" >> CHANGELOG.md
           git log --pretty=format:"- %s (%h)" $PREV_TAG..HEAD >> CHANGELOG.md
           
-          # Set output
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat CHANGELOG.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          # Set output with proper delimiter
+          {
+            echo 'changelog<<CHANGELOG_EOF'
+            cat CHANGELOG.md
+            echo 'CHANGELOG_EOF'
+          } >> $GITHUB_OUTPUT
 
       - name: 🎉 Create GitHub Release
         uses: softprops/action-gh-release@v1
