--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "docker:compose-down": "docker-compose down",
     "release": "npm version patch && npm run docker:build-multi",
     "release:minor": "npm version minor && npm run docker:build-multi",
-    "release:major": "npm version major && npm run docker:build-multi"
+    "release:major": "npm version major && npm run docker:build-multi",
+    "policy:check": "node scripts/policy-cli.mjs check",
+    "policy:report": "node scripts/policy-cli.mjs report",
+    "policy:fix": "node scripts/policy-cli.mjs fix",
+    "policy:rules": "node scripts/policy-cli.mjs rules"
   },
   "keywords": [
     "mcp",
@@ -43,7 +47,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.4",
     "zod": "^3.23.8",
-    "@kubernetes/client-node": "^0.21.0"
+    "@kubernetes/client-node": "^0.21.0",
+    "commander": "^11.0.0",
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
